# wf_optimizer

./: .gitignore  Cargo.toml  mod data download.url  readme.md  rifle_mods.csv  test.txt  warframe optimizer flow.excalidraw
charts/: warframe buff effect flow.excalidraw  warframe optimizer CLI flow.excalidraw  warframe optimizer tui scheme 0.3.0.excalidraw
data/: rifle_mods.csv  rifle_stats.csv
game_data/: gun_arcanes.csv  gun_data.csv  gun_mods.csv  rifle_arcanes.csv  rifle_mods.csv  rifle_stats.csv
src/: brute_force_solution.rs  buff_effect.rs  build_calc.rs  cli_inputs.rs  combinatorics.rs  context_core.rs  core.rs  data.rs  display.rs  file_interfacing.rs  gun_core.rs  impl_blocks.rs  json_parser.rs  legacy.rs  main.rs  memory.rs  mod_parsing.rs  mod_structs.rs  old.rs  parsing.rs  structs.rs  supporting_functions.rs  tui.rs  weapon_select.rs  weapon_structs.rs  workflows.rs
src/data/: gun_arcanes.csv  gun_data.csv  gun_mods.csv
src/legacy/: buff_effect.rs  cli_inputs.rs  display.rs  workflows.rs
src/old/: brute_force_solution.rs  cli_inputs.rs  file_interfacing.rs  gun_core.rs  mod_structs.rs  weapon_structs.rs
src/tui/: build_display.rs  build_organization_structs.rs  context_menu.rs  stat_screen.rs  weapon_search.rs  weapon_search_menu.rs
