[package]
name = "warframe_optimizer"
version = "0.2.6"
edition = "2021"

[dependencies]
#rayon = "1.10.0"
#rusqlite = "0.35.0"

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
incremental = false
debug = false
overflow-checks = false